# stagediver

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  design.md  example_usage.py  makefile  pyproject.toml  requirements.txt  roskilde_lineup_20250202_003339.json  setup.py  test_roskilde.py
.devcontainer/: devcontainer.json
config/: default.yaml
data/: lineups.json  lineups_historical.json  roskilde_2025.json  roskilde_2026.json
docs/: design.md
pages/: 1_Blind_Mode.py
scripts/: __init__.py  generate_lineup_history.py  save_roskilde_lineup.py  scrape_roskilde.py  your_streamlit_app.py
stagediver/: __init__.py  config.py  storage.py
stagediver/calendar/: __init__.py
stagediver/cli/: __init__.py  generate_lineup_history.py  scrape_lineup.py
stagediver/common/: __init__.py
stagediver/common/config/: __init__.py
stagediver/common/utils/: __init__.py
stagediver/enrichment/: __init__.py
stagediver/models/: __init__.py
stagediver/rating/: __init__.py
stagediver/scraper/: __init__.py  scraper.py
stagediver/scraper/festivals/roskilde/: roskilde_2025.py
stagediver/scraper/roskilde_festival__2025/: scraper.py
stagediver/scraper/roskilde_festival__2026/: scraper.py
stagediver/visualization/: __init__.py
stagediver/web/: __init__.py  app.py  🎸_Stagediver.py  🎸_Welcome.py
stagediver/web/components/: artist_card.py  sidebar.py  utils.py
stagediver/web/pages/: 1_Explore.py  1_⭐_My_Lineup.py  1_👂_Explore.py  1_👂_Explore_Artists.py  2_My_Lineup.py  2_⭐_My_Lineup.py  2_📅_Calendar.py  3_Share.py  3_💌_Share.py  3_📅_Calendar.py  __init__.py  calendar_view.py
tests/: __init__.py  conftest.py  test_generate_lineup_history.py
tests/scraper/festivals/roskilde/: test_roskilde_2025.py
