[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stagediver"
version = "0.1.0"
description = "Package configuration and metadata for distribution"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.6.0",
    "pytest>=7.0.0",
    "streamlit>=1.31.0",
    "ics>=0.7.2",
    "pytz>=2023.3",
]

[tool.setuptools]
packages = ["stagediver"]
