[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stagediver"
version = "0.1.0"
description = "A tool for extracting festival lineups and finding your favorite artists"
requires-python = ">=3.9,!=3.9.7"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.6.0",
    "pytest>=7.0.0",
    "streamlit>=1.31.0",
    "ics>=0.7.2",
    "pytz>=2023.3",
    "watchdog>=2.2.0",
]

[tool.setuptools]
packages = ["stagediver"]

# Add pytest configuration
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
